# raft-sim

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/include/: raft_node.h  raft_types.h
backend/src/: main.cpp  raft_node.cpp
frontend/: nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css  index.js
frontend/src/components/: EventLog.jsx  NodePanel.jsx  RaftCanvas.jsx  StatsBar.jsx
frontend/src/hooks/: useRaftWS.js
